@@ -6,7 +6,6 @@ import com.codereview.plugin.model.ReviewResult;
 
 import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
@@ -97,7 +96,8 @@ public class GeminiReviewClient {
     }
 
     private HttpURLConnection openConnection() throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(API_URL + apiKey).openConnection();
+        HttpURLConnection conn = (HttpURLConnection)
+            java.net.URI.create(API_URL + apiKey).toURL().openConnection();
         conn.setRequestMethod("POST");
         conn.setConnectTimeout(TIMEOUT_MS);
         conn.setReadTimeout(TIMEOUT_MS);
